Add data that makes sense

--- a/app/templates/guide.html
+++ b/app/templates/guide.html
@@ -33,17 +33,17 @@
 "email": "jold@fgsjdohtqcrvfluecz-uomagqy.nt",
 "mobile": "+8059433591623",
 "photo": "pggvr:\/\/chnvqwb.tfkshbecpm.fxq\/nwozlkwi.bbh\l2y5t093kx39.ggj",
-"organisation": "Ybsbakoldbf(YVMSPW)",
+"organisation": "FOSSASIA",
 "position": "Uessxkh",
 "country": "Knshzkqcgqg",
 "short_biography": "<c><\/r>",
-"long_biography": "",
-"website": "oluk:\/\/iug.rgkrkbz-vlivvbc.qq",
-"twitter": "",
-"facebook": "",
-"github": "",
-"linkedin": "",
-"city": "Uahknek",
+"long_biography": "FOSSASIA is an organization developing software applications for social change using a wide-range of technologies. It was established 2009. Projects range from Free and Open Source software, to design, graphics and hardware. We also organize and participate in conferences, meetups and code camps. The annual FOSSASIA OpenTechSummit is one of the largest gatherings of developers in Asia and took place in Vietnam, Cambodia and Singapore. Please join us and start contributing to our projects on Github.",
+"website": "https://fossasia.org",
+"twitter": "https://twitter.com/fossasia",
+"facebook": "https://facebook.com/fossasia",
+"github": "https://github.com/fossasia",
+"linkedin": "https://www.linkedin.com/groups/3762811",
+"city": "Uahkne",
 "featured": 0,
 "gender": "",
 "heard_from": "Oboiuu",
