Allow only image files

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -57,7 +57,7 @@
 
           		<section id="upimage-input" style="display: none;">
             	<label for="imageFile">Upload a PNG file for badge background</label>
-           		<input type="file" id="imageFile" name="image">
+           		<input type="file" id="imageFile" name="image" accept="image/*">
           		</section>
 
         	    <li><input type="radio" name="backsource" id="defimage"> Add Default Image </li>
@@ -102,7 +102,7 @@
       			  </section>
 
     		    </ul>
-    		
+
     		    <button  for="pdf" type="submit" name="pdf" value="pdf" class="btn btn-primary"> Generate Badges </button>
 
     		</div>
