Fix indentation and mistakes (#355)

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,7 +7,7 @@
 				{% if m %}
           {% for cat,msg in m %}
                       {% if cat == 'success-pdf' %}
-		                    	<div class="flash-success">Your badges has been successfully generated!</div>
+		                    	<div class="flash-success">Your badges have been successfully generated!</div>
 		                    	<div class="text-center">
 		                    	<a href="static/badges/{{msg}}-badges.pdf" class="btn btn-success" download="{{msg}}.badges.pdf">Download as PDF</a>
 	                    		</div>
