Disable Generate badges button

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -86,7 +86,7 @@
               </span>
           		<label  for="inputFile">Select a background color</label>
           		<div>
-          		<input type="text" id="picker" class="form-control" value="#4fc8db" name="bg_color" >
+              <input type="text" id="picker" class="form-control" name="bg_color">
           		</div>
         		  </section>
 
@@ -111,8 +111,8 @@
 
     		    </ul>
             <div id="error" class="config-error"> Please upload a JSON file </div>
-    		    <button  for="pdf" type="submit" name="pdf" value="pdf" class="btn btn-primary"> Generate Badges </button>
 
+            <button type="submit" disabled="disabled" class="btn btn-primary">Generate Badges</button>
     		</div>
         </div>
     		</div>
