Fix #294 - Added form validation in front end using JavaScript
Fixes issue #294, Added JS form validation, input filters and
input specific errors.

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -171,6 +171,12 @@ margin-bottom: 20px;
 ul, ol {
   padding: 0;
 }
+#error {
+  text-align: center;
+  color: red;
+  margin: 10px;
+  display: none;
+}
 @media screen and (max-width: 780px) {
   .navbar-header {
     margin-top: 5px;
