Fixes #344 Instead of User Guide add an icon

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -24,7 +24,7 @@
 
   			  <label> User Input Guide</label>
   			    <ul style="list-style-type:none">
-  			      <li>Check out our <a href="/guide" target="_blank">User Input Guide</a></li>
+  			      <li>Check out our <a href="/guide" target="_blank"><img src="static/images/rsz_11rsz_1rsz_1rsz_i_icon.png" id="i_icon"/></a></li>
   			    </ul>
 
     		  <label>Choose your Data Source</label>
