--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,119 +1,125 @@
 {% extends "layout.html" %}
-
 {% block body %}
 <div class="container board">
-  <div class="row">
-    {% with m = get_flashed_messages(with_categories=true) %}
-      {% if m %}
-        {% for cat,msg in m %}
-          {% if cat == 'success-pdf' %}
-            <div class="flash-success">Your badges have been successfully generated!</div>
-            <div class="text-center">
-              <a href="static/badges/{{msg}}-badges.pdf" class="btn btn-success" download="{{msg}}.badges.pdf">Download as PDF</a>
+    <div class="row">
+        <form action="{{ url_for('upload') }}" method="post" enctype="multipart/form-data" onsubmit="return validate()">
+            <div class="row">
+                <div class="container board">
+                    <div class="col-md-4 col-md-offset-4 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
+                        <label> User Input Guide</label>
+                        <ul style="list-style-type:none">
+                            <li>Check out our
+                                <a href="/guide" target="_blank">&nbsp;User Input Guide</a>
+                            </li>
+                        </ul>
+                        <label>Choose your Data Source</label>
+                        <ul style="list-style-type:none">
+                            <li>
+                                <input name="datasource" type="radio" id="csvupload">Add CSV file</li>
+								<section id="csvupload-input" style="display:none">
+									<div class="form-group">
+										<label for="inputFile">Add CSV file containing fields Name,Organization and Handle</label>
+										<input type="file" id="inputFile" name="file" accept=".csv">
+									</div>
+									<div id="error" class="csvfile-error"> Please upload a CSV file! </div>
+								</section>
+                            <li>
+							<li>
+								<input name="datasource" type="radio" id="manualdata">Enter Data Manually</li>
+								<section id="text-input" style="display:none">
+									<div class="form-group">
+										<label for="textArea">Enter One Name per Line </label>
+										<textarea class="form-control" type="text" placeholder="Eg. Hong Phuc,Dang,@hpdang,FOSSASIA " id="textArea" name="csv"></textarea>
+									</div>
+									<div id="error" class="csv-error"> Please fill data in proper format
+										<div class="text-center guide">
+											<a href="/guide" target="_blank">User Input Guide</a>
+										</div>
+									</div>
+								</section>
+							</li>
+                        </ul>
+                        <div id="error" class="no-data-error">Please upload a csv file or enter data!</div>
+                        <label>Choose your Badge Background</label>
+                        <ul style="list-style-type:none">
+                            <li>
+                                <input type="radio" name="backsource" id="pngupload">Add PNG file</li>
+								<section id="upimage-input" style="display: none;">
+									<label for="imageFile">Upload a PNG file for badge background</label>
+									<input type="file" id="imageFile" name="image" accept="image/*">
+								</section>
+                            <li>
+                                <input type="radio" name="backsource" id="defimage">Add Default Image</li>
+								<section id="deimage-input" style="display:none">
+									<label for="inputFile">Select from default images</label>
+									<div class="btn-group">
+										<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+											<span class="placeholder">Select a background</span>
+											<span class="glyphicon glyphicon-chevron-down"></span>
+										</button>
+										<ul class="dropdown-menu">
+											{% for i in default_background %}
+											<li class="menu-options" data-item="{{i}}">
+												<img src="static/uploads/{{i}}"> {{i}}
+											</li>
+											{% endfor %}
+										</ul>
+									</div>
+								</section>
+                            <li>
+							<li>
+								<input type="radio" name="backsource" id="defback">Add Background with custom color</li>
+								<section id="background-input" style="display:none">
+									<span class="user-defined-selected"> Using user_defined.png
+										<img src="static/uploads/user_defined.png" class="user-defined">
+									</span>
+									<label for="inputFile">Select a background color</label>
+									<div>
+										<input type="text" id="picker" class="form-control" name="bg_color">
+									</div>
+								</section>
+							</li>
+                        </ul>
+                        <div id="error" class="no-image-error">Please select a default background or upload an image!</div>
+                        <label>Customise Badges (Optional)</label>
+                        <ul style="list-style-type:none">
+                            <li>
+                                <input type="radio" name="text" id="text">Add Custom text</li>
+								<section id="cutext-input" style="display:none;">
+									<label for="inputFile"></label>
+									<input id="image_text" type="text" class="form-control" placeholder="The text entered here will appear on badges" name="text_on_image"
+									/>
+									<input type="hidden" name="img-default" value="">
+								</section>
+                            <li>
+							<li>
+								<input type="radio" name="text" id="json">Add JSON file</li>
+								<section id="config-input" style="display:none">
+									<label for="inputFile">Upload a config file</label>
+									<input type="file" id="inputFile" name="config" accept=".json">
+								</section>
+							</li>
+                        </ul>
+                        <div id="error" class="config-error">Please upload a JSON file</div>
+                        <button type="submit" disabled="disabled" class="btn btn-block submit-btn">Generate Badges</button>
+                    </div>
+                </div>
             </div>
-          {% else %}
-            <div class="flash-{{cat}}">{{msg}}</div>
-          {% endif %}
-        {% endfor %}
-      {% endif %}
-    {% endwith %}
-
-    <form action="{{ url_for('upload') }}" method="post" enctype="multipart/form-data" onsubmit="return validate()">
-      <div class="row">
-        <div class="container board">
-          <div class="col-md-4 col-md-offset-4 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
-            <label> User Input Guide</label>
-            <ul style="list-style-type:none">
-              <li>Check out our <a href="/guide" target="_blank">User Input Guide</a></li>
-            </ul>
-
-            <label>Choose your Data Source</label>
-            <ul style="list-style-type:none">
-              <li><input name="datasource" type="radio" id="csvupload">Add CSV file</li>
-              <section id="csvupload-input" style="display:none">
-                <div class="form-group">
-                  <label for="inputFile">Add CSV file containing fields Name,Organization and Handle</label>
-                  <input type="file" id="inputFile" name="file" accept=".csv">
-                </div>
-                <div id="error" class="csvfile-error"> Please upload a CSV file! </div>
-              </section>
-
-              <li><input name="datasource" type="radio" id="manualdata">Enter Data Manually</li>
-              <section id="text-input" style="display:none">
-                <div class="form-group">
-                  <label for="textArea" >Enter One Name per Line </label>
-                  <textarea  class = "form-control" type = "text" placeholder="Eg. Hong Phuc,Dang,@hpdang,FOSSASIA "  id= "textArea" name="csv"></textarea>
-                </div>
-                <div id="error" class="csv-error"> Please fill data in proper format
-                  <div class="text-center guide">
-                    <a href="/guide" target="_blank">User Input Guide</a>
-                  </div>
-                </div>
-              </section>
-            </ul>
-            <div id="error" class="no-data-error">Please upload a csv file or enter data!</div>
-
-            <label>Choose your Badge Background</label>
-            <ul style="list-style-type:none">
-              <li><input type="radio" name="backsource" id="pngupload">Add PNG file</li>
-              <section id="upimage-input" style="display: none;">
-                <label for="imageFile">Upload a PNG file for badge background</label>
-                <input type="file" id="imageFile" name="image" accept="image/*">
-              </section>
-
-              <li><input type="radio" name="backsource" id="defimage">Add Default Image</li>
-              <section id="deimage-input" style="display:none">
-                <label for="inputFile">Select from default images</label>
-                <div class="btn-group">
-                  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <span class="placeholder">Select a background</span>
-                    <span class="glyphicon glyphicon-chevron-down"></span>
-                  </button>
-                  <ul class="dropdown-menu">
-                    {% for i in default_background %}
-                      <li class="menu-options" data-item="{{i}}">
-                        <img src="static/uploads/{{i}}"> {{i}}
-                      </li>
-                    {% endfor %}
-                  </ul>
-                </div>
-              </section>
-
-              <li><input type="radio" name="backsource" id="defback">Add Background with custom color</li>
-              <section id="background-input" style="display:none">
-                <span class="user-defined-selected"> Using user_defined.png
-                  <img src="static/uploads/user_defined.png" class="user-defined">
-                </span>
-                <label for="inputFile">Select a background color</label>
-                <div>
-                  <input type="text" id="picker" class="form-control" name="bg_color">
-                </div>
-              </section>
-            </ul>
-            <div id="error" class="no-image-error">Please select a default background or upload an image!</div>
-
-            <label>Customise Badges (Optional)</label>
-            <ul style="list-style-type:none">
-              <li><input type="radio" name="text" id="text">Add Custom text</li>
-              <section id="cutext-input" style="display:none;">
-                <label for="inputFile"></label>
-                <input id="image_text" type="text" class="form-control" placeholder="The text entered here will appear on badges" name="text_on_image"/>
-                <input type="hidden" name="img-default" value="">
-              </section>
-
-              <li><input type="radio" name="text" id="json">Add JSON file</li>
-              <section id="config-input" style="display:none">
-                <label for="inputFile">Upload a config file</label>
-                <input type="file" id="inputFile" name="config" accept=".json">
-              </section>
-            </ul>
-            <div id="error" class="config-error">Please upload a JSON file</div>
-
-            <button type="submit" disabled="disabled" class="btn btn-primary">Generate Badges</button>
-          </div>
-        </div>
-      </div>
-    </form>
-  </div>
+        </form>
+		{% with m = get_flashed_messages(with_categories=true) %}
+			{% if m %}
+		  		{% for cat,msg in m %}
+		   			{% if cat == 'success-pdf' %}
+		   				<div class="flash-success">Your badges have been created successfully.</div>
+        					<div class="text-center">
+            					<a href="static/badges/{{msg}}-badges.pdf" class="btn btn-success" download="{{msg}}.badges.pdf">Download as PDF</a>
+        					</div>
+        			{% else %}
+       			 		<div class="flash-{{cat}}">{{msg}}</div>
+		   			{% endif %}
+				{% endfor %}
+			{% endif %}
+		{% endwith %}
+    </div>
 </div>
 {% endblock %}
