--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -43,9 +43,11 @@
                         <label>Choose your Badge Background</label>
                         <ul style="list-style-type:none">
                             <li>
-                                <input type="radio" name="backsource" id="pngupload">Add PNG file</li>
-								<section id="upimage-input" style="display: none;">
-									<label for="imageFile">Upload a PNG file for badge background</label>
+                                <input type="radio" name="backsource" id="pngupload">Add PNG file
+                                <i id="in" class="fa fa-info-circle" title="Best Suitable Image &#013; 1. Size(width x height) : 749 X 1049 Pixels &#013; 2. Resolution : 300 DPI" ></i>
+                            </li>
+								<section id="upimage-input"  style="display: none;">
+									<label for="imageFile">Upload a PNG file for badge background </label>
 									<input type="file" id="imageFile" name="image" accept="image/*">
 								</section>
                             <li>
