Fixes #364: Fix Travis CI

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -103,7 +103,7 @@
 							</li>
                         </ul>
                         <div id="error" class="config-error">Please upload a JSON file</div>
-                        <button type="submit" disabled="disabled" class="btn btn-block submit-btn">Generate Badges</button>
+                        <button type="submit" disabled="disabled" class="btn btn-block submit-btn" id="btn-submit">Generate Badges</button>
                     </div>
                 </div>
             </div>
