Feat #384: Add custom font for badges
Fixes #374

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -183,6 +183,11 @@
     border-bottom: 1px solid darkgray;
 }
 
+.font-options {
+  border-bottom: 1px solid darkgray;
+  padding: 9px;
+}
+
 .dropdown-menu>li:hover {
     background: #f1f9fd;
     cursor: pointer;
