Added correct link to 'Blogs' icon

--- a/app/templates/_header.html
+++ b/app/templates/_header.html
@@ -24,7 +24,7 @@
                             </a>
                         </div>
                         <div class="custom-menu-item">
-                            <a class="custom-icon" href="http://blog.fossasia.org" target="_blank">
+                            <a class="custom-icon" href="http://blog.fossasia.org/tag/badgeyay" target="_blank">
                                 <img src="static/images/blog.png">
                                 <p class="custom-title">Blogs</p>
                             </a>
