--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,8 +1,9 @@
 #icon  > .fa {
-    left: 70%;
+    left: 60%;
+    color: #000;
     font-size: 24px;
     position: relative;
-    top: 2px;
+    top:3px;
 }
 
 .board .col-md-4 {
@@ -234,6 +235,24 @@ ol {
     color: red;
     margin: 10px;
     display: none;
+}
+
+@media screen and (max-width: 376px){
+    #icon > .fa {
+        left: 10% !important;
+    }
+}
+
+@media screen and (max-width: 1200px){
+    #icon  > .fa {
+        left: 30%;
+    }
+}
+
+@media screen and (max-width: 1570px){
+    #icon  > .fa {
+        left: 40%;
+    }
 }
 
 @media screen and (max-width: 780px) {
