Fixes position of version link

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -20,9 +20,9 @@
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
     <script src="{{ url_for('static', filename='js/form.js') }}"></script>
 
-    <div class="footer">
-        <strong>Version:</strong>
-        <a class="version"></a>
+    <div id="footer">
+        <span> <strong>Version: </strong></span>
+        <span> <a class="version"></a></span>
     </div>
 </body>
 
