--- a/app/templates/guide.html
+++ b/app/templates/guide.html
@@ -3,73 +3,33 @@
 <div class="container board">
     <div class="row">
         <div class="jumbotron text-center">
-            <h1>Badgeyay User-Input Guide</h1>
+            <h1>BadgeYAY Backend API Guide</h1>
         </div>
         <div class="col-sm-12 text-center">
-            <p>Want to learn what is the "Correct Format"?</p>
-            <p>Check
-                <a href="#csv">CSV</a>,
-                <a href="#manual">Manual Data</a>,
-                <a href="#json">JSON</a>
-            </p>
+            <p>API queries and related doc for BadgeYAY backend</p>
         </div>
         <div class="col-sm-12 text-left options" id="csv">
-            <h2>1. CSV Format</h2>
-            <pre class="alert-info">The CSV must be uploaded with 4 columns of data</pre>
-            <p>Four comma (',') seperated values should be present in the CSV</p>
-            <p>See Example Image Below</p>
-            <img src="static/images/guide_csv.png" class="guide_img" alt="CSV Image">
-        </div>
-        <div class="col-sm-12 text-left options" id="manual">
-            <h2>2. Manual Data Format</h2>
-            <pre class="alert-info">Format for Manual data is same as CSV's data</pre>
-            <p>Four comma (',') seperated values on each line is the correct format</p>
-            <p>See Image below</p>
-            <img src="static/images/guide_manual.png" class="guide_img" alt="Manual Data Image">
-        </div>
-        <div class="col-sm-12 text-left options" id="json">
-            <h2>3. JSON Data Format</h2>
-            <pre class="alert-info">JSON is an optional parameter to customise your badges</pre>
-            <p>An example JSON has been provided Below</p>
+            <h2>1. /api/v1.0/generate_badges</h2>
+            <pre class="alert-info">Method: POST</pre>
+            <p>
+                Parameters:<br>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- custfont: Font to use. if it is null or not present the default font will be used.<br>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- file: .csv which contains user data.<br>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- csv: CSV data as plain text seperated by a comma (,).<br>
+                (Either file or csv must be present in the query if both are present, file will be processed).<br>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- img-default: The dafault image to use. (Required)<br>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- bg_color: Hex code of background colour of the badge. Will only be parsed if the value of img-default is "user-defined.png".<br>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- image: The custom background image (in .png format) of the badge which will be uploaded.<br>
+                (Either img-default or csv must be present in the query if both are present, image will be processed)<br>
+            </p>
+            <p>Sample response:</p>
             <pre>[{
-"id": 1070,
-"name": "Ltnng Nnxmlt",
-"email": "jold@fgsjdohtqcrvfluecz-uomagqy.nt",
-"mobile": "+8059433591623",
-"photo": "pggvr:\/\/chnvqwb.tfkshbecpm.fxq\/nwozlkwi.bbh\l2y5t093kx39.ggj",
-"organisation": "FOSSASIA",
-"position": "Uessxkh",
-"country": "Knshzkqcgqg",
-"short_biography": "<c><\/r>",
-"long_biography": "FOSSASIA is an organization developing software applications for social change using a wide-range of technologies. It was established 2009. Projects range from Free and Open Source software, to design, graphics and hardware. We also organize and participate in conferences, meetups and code camps. The annual FOSSASIA OpenTechSummit is one of the largest gatherings of developers in Asia and took place in Vietnam, Cambodia and Singapore. Please join us and start contributing to our projects on Github.",
-"website": "https://fossasia.org",
-"twitter": "https://twitter.com/fossasia",
-"facebook": "https://facebook.com/fossasia",
-"github": "https://github.com/fossasia",
-"linkedin": "https://www.linkedin.com/groups/3762811",
-"city": "Uahkne",
-"featured": 0,
-"gender": "",
-"heard_from": "Oboiuu",
-"icon": "umdnc:\/\/ielslpn.jjfjevzxjf.wqo\/sbssygxo.udw\/586d0e2s-b3cw-7710-882b-k69cf25866hx.zxr",
-"sessions": [
-  {
-    "id": 4361,
-    "title": "Qlfzdid GiarJbgaZssvzh 7290"
-  },
-  {
-    "id": 3287,
-    "title": "Qkysglazcvgn - Ssjbyjtft Lnge Bcrify sa"
-  }
-],
-"small": "qundt:\/\/boeqgph.aW\/ryl0puoy-5181-8615-54y7-658ucyj5x787.aes",
-"speaking_experience": "",
-"sponsorship_required": "",
-"thumbnail": "ebrvh:\/\/yfparbk.mcfhzpphko.nmb\/5i9a1742-d388-6rtz-n914-gj332a4dasp4.xnj"
-},..]
+"type" : "success"
+"message" : "Pdf generation completed successfully"
+"download_link" : "https://badgeyay-dev.herokuapp.com/static/badges/team-png-csv-badges.pdf"
+}]
 		  </pre>
-            <p>The JSON File contains an array of JSON Objects</p>
         </div>
     </div>
-</div>
+</div><br>
 {% endblock %}
