--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %} {% block body %}
 <div class="container board">
     <div class="row">
-        <form action="{{ url_for('upload') }}" method="post" enctype="multipart/form-data" onsubmit="return validate()">
+        <form id="form1" action="{{ url_for('upload') }}" method="post" enctype="multipart/form-data" onsubmit="return validate()">
             <div class="row">
                 <div class="container board">
                     <div class="col-md-4 col-md-offset-4 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
@@ -96,7 +96,16 @@
 							<input type="hidden" name="custfont" value="">
 						</ul>
                         <button type="submit" disabled="disabled" class="btn btn-block submit-btn">Generate Badges</button>
+						<button type="button" disabled="disabled" class="btn btn-block btn-warning" id="preview-btn">Preview</button>
+                        <div id="preview" class="preview-image hidden">
+                        	<li class="preview-image-li" id="preview-li-1"></li>
+                        	<li class="preview-image-li" id="preview-li-2"></li>
+                        	<li class="preview-image-li" id="preview-li-3"></li>
+                        	<li class="preview-image-li" id="preview-li-4"></li>
+                        </div>
+
                     </div>
+
                 </div>
             </div>
         </form>
