added the download button in download page

--- a/app/templates/badges.html
+++ b/app/templates/badges.html
@@ -1,14 +1,22 @@
 {% extends 'layout.html' %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Badges</title>
-</head>
-<body>
-
 {% block body %}
-    The Body
+    <div class="container board">
+        <div class="row">
+            {% with m = get_flashed_messages(with_categories=true) %}
+                {% if m %}
+                    {% for cat,msg in m %}
+                        {% if cat == 'success-pdf' %}
+                            <div class="flash-success">Your badges have been created successfully.</div>
+                            <div class="text-center">
+                                <a href="static/badges/{{ msg }}-badges.pdf" class="btn btn-success"
+                                   download="{{ msg }}-badges.pdf">Download as PDF</a>
+                            </div>
+                        {% else %}
+                            <div class="flash-{{ cat }}">{{ msg }}</div>
+                        {% endif %}
+                    {% endfor %}
+                {% endif %}
+            {% endwith %}
+        </div>
+    </div>
 {% endblock %}
-</body>
-</html>
