--- a/app/templates/download.html
+++ b/app/templates/download.html
@@ -15,6 +15,13 @@
                             <div class="flash-{{ cat }}">{{ msg }}</div>
                         {% endif %}
                     {% endfor %}
+                {% else %}
+                    <div class="container">
+                        <div class="row text-center">
+                            <h1 class="not-found">404</h1>
+                            <h1>Page Not Found</h1>
+                        </div>
+                    </div>
                 {% endif %}
             {% endwith %}
         </div>
