--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -4,6 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description"
+    content="Badgeyay is a simple badge generator with a simple web UI.">
+    <meta property="og:site_name" content="badgeyay-dev.herokuapp.com">
+    <meta property="og:url" content="https://badgeyay-dev.herokuapp.com/">
+    <meta property="og:title" content="Badgeyay - Badge Generator">
+    <meta property="og:description" content="Badgeyay is a simple badge generator with a simple web UI to add data and generate printable badges in a zip.">
+    <meta name="twitter:site" content="@fossasia">
+    <meta name="twitter:url" content="https://twitter.com/fossasia">
+    <meta name="twitter:title" content="Badgeyay - FOSSASIA">
+    <meta name="twitter:description" content="Badgeyay is a simple badge generator with a simple web UI.">
+ 
     <title>BadgeYay</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/jquery.minicolors.css') }}">
