Fixed small error

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description"
     content="Badgeyay is a simple badge generator with a simple web UI.">
-    <meta property="og:site_name" content="badgeyay-dev.herokuapp.com">
+    <meta property="og:site_name" content="Badgeyay">
     <meta property="og:url" content="https://badgeyay-dev.herokuapp.com/">
     <meta property="og:title" content="Badgeyay - Badge Generator">
     <meta property="og:description" content="Badgeyay is a simple badge generator with a simple web UI to add data and generate printable badges in a zip.">
