@0x48piraj : Applied various themes, Aligned radio(s), resized button

--- a/0x48piraj/app/styles/app.css
+++ b/0x48piraj/app/styles/app.css
@@ -25,7 +25,7 @@ body {
   overflow: hidden;
   overflow-y: scroll;
   position: relative;
-  background: #e24a64;
+  background: #87fff9; /*#26f2a7*/
   
 }
 
