--- a/0x48piraj/app/templates/components/badge-front.hbs
+++ b/0x48piraj/app/templates/components/badge-front.hbs
@@ -42,9 +42,9 @@
 <div style="width:100%" id="r8-balloon-radio" class="container">
     <p style="font-family: 'Bungee';">Choose your Badge Background</p><p style="font-family: 'Bangers';"><br><br>
     <ul>
-        Add PNG file&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<li><input class="radio r8-radio-float" type="radio" value="0" id="png-image" name="badge-background" onclick={{action 'backgroundsourceChanged' 'png'}} /></li><br>
+        Add PNG file&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<li><input class="radio r8-radio-float" type="radio" value="0" id="png-image" name="badge-background" onclick={{action 'backgroundsourceChanged' 'png'}} /></li><br>
         Add Default Image<li><input class="radio r8-radio-float" type="radio" id="default-image" name="badge-background" onclick={{action 'backgroundsourceChanged' 'defaults'}} value="1"/></li><br>
-		Add Custom color&nbsp;<li><input class="radio r8-radio-float" type="radio" id="background-custom" name="badge-background" onclick={{action 'backgroundsourceChanged' 'color'}} value="2"/></li>
+		Add Custom color<li><input class="radio r8-radio-float" type="radio" id="background-custom" name="badge-background" onclick={{action 'backgroundsourceChanged' 'color'}} value="2"/></li>
       </ul>
     </p>
 </div>
@@ -102,7 +102,7 @@
       </div>
 </form>
     <div class="button">
-      <a href="loading.html" style="display: none;"  id="gen"><button style="width:100%" class="btn draw-border">Generate Badges!</button></a>
+      <a href="loading.html" style="display: none;"  id="gen"><button style="font-family: 'Bangers';font-size: 30px !important;width:100%" class="btn draw-border">Generate Badges!</button></a>
     </div>
 <div id="r8-logo-coin" ></div>
 </div>
