--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description"
-    content="Badgeyay is a simple badge generator with a simple web UI.">
+    <meta name="description" content="Badgeyay is a simple badge generator with a simple web UI.">
     <meta property="og:site_name" content="Badgeyay">
     <meta property="og:url" content="https://badgeyay-dev.herokuapp.com/">
     <meta property="og:title" content="Badgeyay - Badge Generator">
