Fixes#351 Badgeholder Designation to be drawn from CSV

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -22,7 +22,7 @@
 								<section id="text-input" style="display:none">
 									<div class="form-group">
 										<label for="textArea"> Enter One Name per Line </label>
-										<textarea class="form-control" type="text" placeholder="Eg. Hong Phuc,Dang,@hpdang,FOSSASIA " id="textArea" name="csv"></textarea>
+										<textarea class="form-control" type="text" placeholder="Eg. Hong Phuc,Dang,Organiser,@hpdang,FOSSASIA " id="textArea" name="csv"></textarea>
 									</div>
 									<div id="error" class="csv-error"> Please fill data in proper format
 										<div class="text-center guide">
@@ -102,6 +102,7 @@
                         	<li class="preview-image-li" id="preview-li-2"></li>
                         	<li class="preview-image-li" id="preview-li-3"></li>
                         	<li class="preview-image-li" id="preview-li-4"></li>
+                        	<li class="preview-image-li" id="preview-li-5"></li>
                         </div>
 
                     </div>
